crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__exempt_modules.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC002 [*] Move third-party import `flask` into a type-checking block
  --> exempt_modules.py:14:12
   |
13 | def f():
14 |     import flask
   |            ^^^^^
15 |
16 |     x: flask
   |
help: Move into type-checking block
   |
 1 + from typing import TYPE_CHECKING
 2 ~ 
 3 + if TYPE_CHECKING:
 4 +     import flask
 5 | def f():
   |
note: This is an unsafe fix and may change runtime behavior
