crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__github_issue_15681_fix_test.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC003 [*] Make standard library import `pathlib` lazy
 --> <filename>:4:8
  |
2 | from __future__ import annotations
3 |
4 | import pathlib  # TC003
  |        ^^^^^^^
5 |
6 | TYPE_CHECKING = False
  |
help: Convert to a lazy import (or move into a type-checking block)
  |
3 |
  - import pathlib  # TC003
4 + lazy import pathlib  # TC003
5 |
  |
note: This is an unsafe fix and may change runtime behavior
