crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__github_issue_15723_ideal_import_order.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC004 [*] Move import `importlib.abc` out of type-checking block. Import is used for more than type hinting.
  --> <filename>:8:12
   |
 6 | if TYPE_CHECKING:
 7 |     import importlib.machinery
 8 |     import importlib.abc
   |            ^^^^^^^^^^^^^
 9 |
10 | class Foo(importlib.abc.MetaPathFinder):
   |           --------- Used at runtime here
11 |     def bar(self) -> importlib.machinery.ModuleSpec: ...
   |
help: Move out of type-checking block
  |
4 | from typing import TYPE_CHECKING
5 + import importlib.abc
6 |
7 | if TYPE_CHECKING:
8 |     import importlib.machinery
  -     import importlib.abc
9 |
  |
note: This is an unsafe fix and may change runtime behavior
