crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__multiple_members.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC002 [*] Move third-party import `pandas.DataFrame` into a type-checking block
 --> <filename>:7:5
  |
6 | from pandas import (
7 |     DataFrame,  # DataFrame
  |     ^^^^^^^^^
8 |     Series,  # Series
9 | )
  |
help: Move into type-checking block
   |
 4 ~ from typing import TYPE_CHECKING
 5 |
 6 + 
 7 + 
 8 + if TYPE_CHECKING:
 9 +     from pandas import (
10 +         DataFrame,  # DataFrame
11 +         Series,  # Series
12 +     )
   |
note: This is an unsafe fix and may change runtime behavior

TC002 [*] Move third-party import `pandas.Series` into a type-checking block
 --> <filename>:8:5
  |
6 | from pandas import (
7 |     DataFrame,  # DataFrame
8 |     Series,  # Series
  |     ^^^^^^
9 | )
  |
help: Move into type-checking block
   |
 4 ~ from typing import TYPE_CHECKING
 5 |
 6 + 
 7 + 
 8 + if TYPE_CHECKING:
 9 +     from pandas import (
10 +         DataFrame,  # DataFrame
11 +         Series,  # Series
12 +     )
   |
note: This is an unsafe fix and may change runtime behavior
