crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__multiple_modules_different_types.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC003 [*] Move standard library import `os` into a type-checking block
 --> <filename>:6:8
  |
4 | from typing import TYPE_CHECKING
5 |
6 | import os, pandas
  |        ^^
7 |
8 | def f(x: os, y: pandas):
  |
help: Move into type-checking block
  |
4 ~ from typing import TYPE_CHECKING
5 |
6 + import pandas
7 + 
8 + if TYPE_CHECKING:
9 +     import os
  |
note: This is an unsafe fix and may change runtime behavior

TC002 [*] Move third-party import `pandas` into a type-checking block
 --> <filename>:6:12
  |
4 | from typing import TYPE_CHECKING
5 |
6 | import os, pandas
  |            ^^^^^^
7 |
8 | def f(x: os, y: pandas):
  |
help: Move into type-checking block
  |
4 ~ from typing import TYPE_CHECKING
5 |
6 + import os
7 + 
8 + if TYPE_CHECKING:
9 +     import pandas
  |
note: This is an unsafe fix and may change runtime behavior
