crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__pre_py310_quoted-type-alias_TC008_union_syntax_pre_py310.py.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC008 [*] Remove quotes from type alias
  --> TC008_union_syntax_pre_py310.py:10:20
   |
 8 | if TYPE_CHECKING:
 9 |     c: TypeAlias = 'int | None'  # OK
10 |     d: TypeAlias = 'Annotated[int, 1 | 2]'  # TC008
   |                    ^^^^^^^^^^^^^^^^^^^^^^^
11 |     e: TypeAlias = 'Annotated[int, 1 + 2]'  # TC008
12 |     f: TypeAlias = 'dict[str, int | None]'  # OK
   |
help: Remove quotes
   |
10 -     d: TypeAlias = 'Annotated[int, 1 | 2]'  # TC008
10 +     d: TypeAlias = Annotated[int, 1 | 2]  # TC008
   |

TC008 [*] Remove quotes from type alias
  --> TC008_union_syntax_pre_py310.py:11:20
   |
 9 |     c: TypeAlias = 'int | None'  # OK
10 |     d: TypeAlias = 'Annotated[int, 1 | 2]'  # TC008
11 |     e: TypeAlias = 'Annotated[int, 1 + 2]'  # TC008
   |                    ^^^^^^^^^^^^^^^^^^^^^^^
12 |     f: TypeAlias = 'dict[str, int | None]'  # OK
   |
help: Remove quotes
   |
11 -     e: TypeAlias = 'Annotated[int, 1 + 2]'  # TC008
11 +     e: TypeAlias = Annotated[int, 1 + 2]  # TC008
   |
