crates/ruff_linter/src/rules/flake8_type_checking/snapshots/ruff_linter__rules__flake8_type_checking__tests__pre_py310_quoted-type-alias_TC008_union_syntax_pre_py310.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_type_checking/mod.rs
---
TC008_union_syntax_pre_py310.pyi:3:16: TC008 [*] Remove quotes from type alias
  |
1 | from typing import Annotated, TypeAlias
2 | 
3 | a: TypeAlias = 'int | None'  # TC008
  |                ^^^^^^^^^^^^ TC008
4 | b: TypeAlias = 'Annotated[int, 1 | 2]'  # TC008
  |
  = help: Remove quotes

ℹ Safe fix
1 1 | from typing import Annotated, TypeAlias
2 2 | 
3   |-a: TypeAlias = 'int | None'  # TC008
  3 |+a: TypeAlias = int | None  # TC008
4 4 | b: TypeAlias = 'Annotated[int, 1 | 2]'  # TC008

TC008_union_syntax_pre_py310.pyi:4:16: TC008 [*] Remove quotes from type alias
  |
3 | a: TypeAlias = 'int | None'  # TC008
4 | b: TypeAlias = 'Annotated[int, 1 | 2]'  # TC008
  |                ^^^^^^^^^^^^^^^^^^^^^^^ TC008
  |
  = help: Remove quotes

ℹ Safe fix
1 1 | from typing import Annotated, TypeAlias
2 2 | 
3 3 | a: TypeAlias = 'int | None'  # TC008
4   |-b: TypeAlias = 'Annotated[int, 1 | 2]'  # TC008
  4 |+b: TypeAlias = Annotated[int, 1 | 2]  # TC008
